//  Copyright 2019 The bigfile Authors. All rights reserved.
//  Use of this source code is governed by a MIT-style
//  license that can be found in the LICENSE file.

syntax = "proto3";

package bigfile.file_delete;

import "file.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Bigfile.Protobuf.WellKnownTypes";
option cc_enable_arenas = true;
option go_package = "github.com/bigfile/bigfile/rpc";
option java_package = "com.bigfile.protobuf";
option java_outer_classname = "FileDeleteProto";
option java_multiple_files = true;
option objc_class_prefix = "BPR";

// FileDeleteRequest represent the token delete request
message FileDeleteRequest {
    string token = 1;
    string file_uid = 2;
    bool force_delete_dir = 3;
    google.protobuf.StringValue secret = 4;
}

// FileDeleteResponse represent the token delete response
message FileDeleteResponse {
    uint64 request_id = 1;
    bigfile.file.File file = 2;
}

// FileDelete is used to delete a token
service FileDelete {
    rpc fileDelete (FileDeleteRequest) returns (FileDeleteResponse) {}
}