//  Copyright 2019 The bigfile Authors. All rights reserved.
//  Use of this source code is governed by a MIT-style
//  license that can be found in the LICENSE file.

syntax = "proto3";

package bigfile.file_read;

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Bigfile.Protobuf.WellKnownTypes";
option cc_enable_arenas = true;
option go_package = "github.com/bigfile/bigfile/rpc";
option java_package = "com.bigfile.protobuf";
option java_outer_classname = "FileReadProto";
option java_multiple_files = true;
option objc_class_prefix = "BPR";

// FileReadRequest represent the token delete request
message FileReadRequest {
    string token = 1;
    string file_uid = 2;
    google.protobuf.StringValue secret = 4;
}

// FileReadResponse represent the token delete response
message FileReadResponse {
    bytes content = 1;
}

// FileRead is used to delete a token
service FileRead {
    rpc fileRead (FileReadRequest) returns (stream FileReadResponse) {}
}